// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should mount with no items 1`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={false}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        -1,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      />
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should mount with no items with section headers 1`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={true}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        -1,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <Section
          headerContent="Header1"
          key=".0"
          listItems={Array []}
          sectionIndex={0}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              />
            }
            isSelected={false}
            key="Header1"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              >
                <div
                  className="list-section-header"
                  id="Section-1"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header1
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header1
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
        </Section>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should mount with one items 1`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={false}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        -1,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <ListItem
          aria-selected={false}
          className="stuff1"
          content={
            <p>
              text1
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$123"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text1
            </p>
          </li>
        </ListItem>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should mount with one items with Section Headers 1`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={true}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        -1,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <Section
          headerContent="Header1"
          key=".0"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff1"
                content={
                  <p>
                    text1
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={0}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              />
            }
            isSelected={false}
            key="Header1"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              >
                <div
                  className="list-section-header"
                  id="Section-1"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header1
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header1
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff1"
            content={
              <p>
                text1
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="123"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text1
              </p>
            </li>
          </ListItem>
        </Section>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should render a default component 1`] = `
<SelectableList
  disableUnselectedItems={false}
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
/>
`;

exports[`should render with a selectable and non-selectable item 1`] = `
<SelectableList
  disableUnselectedItems={false}
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelected={false}
    key="123"
  />
  <ListItem
    isSelectable={false}
    isSelected={false}
    key="124"
  />
</SelectableList>
`;

exports[`should render with hasChevrons 1`] = `
<SelectableList
  disableUnselectedItems={false}
  hasChevrons={true}
  hasSections={false}
  isDivided={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelected={false}
    key="123"
  />
</SelectableList>
`;

exports[`should render with isDivided 1`] = `
<SelectableList
  disableUnselectedItems={false}
  hasChevrons={false}
  hasSections={false}
  isDivided={true}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelected={false}
    key="123"
  />
</SelectableList>
`;

exports[`should render with items 1`] = `
<SelectableList
  disableUnselectedItems={false}
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <ListItem
    className="stuff1"
    content={
      <p>
        text1
      </p>
    }
    isSelected={false}
    key="123"
  />
  <ListItem
    className="stuff2"
    content={
      <p>
        text2
      </p>
    }
    isSelected={false}
    key="124"
  />
  <ListItem
    className="stuff3"
    content={
      <p>
        text3
      </p>
    }
    isSelected={false}
    key="125"
  />
  <ListItem
    className="stuff4"
    content={
      <p>
        text4
      </p>
    }
    isSelected={false}
    key="126"
  />
  <ListItem
    className="stuff5"
    content={
      <p>
        text5
      </p>
    }
    isSelected={false}
    key="127"
  />
</SelectableList>
`;

exports[`should render with sections 1`] = `
<SelectableList
  disableUnselectedItems={false}
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
  onChange={[Function]}
  selectedIndexes={
    Array [
      -1,
    ]
  }
>
  <Section
    headerContent="Header1"
    listItems={
      Array [
        <ListItem
          className="stuff1"
          content={
            <p>
              text1
            </p>
          }
          isSelected={false}
        />,
        <ListItem
          className="stuff2"
          content={
            <p>
              text2
            </p>
          }
          isSelected={false}
        />,
        <ListItem
          className="stuff3"
          content={
            <p>
              text3
            </p>
          }
          isSelected={false}
        />,
        <ListItem
          className="stuff4"
          content={
            <p>
              text4
            </p>
          }
          isSelected={false}
        />,
        <ListItem
          className="stuff5"
          content={
            <p>
              text5
            </p>
          }
          isSelected={false}
        />,
      ]
    }
    sectionIndex={0}
  />
</SelectableList>
`;

exports[`should select an item 1`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={false}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        0,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <ListItem
          aria-selected={true}
          className="stuff1"
          content={
            <p>
              text1
            </p>
          }
          isSelectable={true}
          isSelected={true}
          key=".$123"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={true}
            className="list-item selected is-selectable stuff1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text1
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff2"
          content={
            <p>
              text2
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$124"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text2
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff3"
          content={
            <p>
              text3
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$125"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff3"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text3
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff4"
          content={
            <p>
              text4
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$126"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff4"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text4
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff5"
          content={
            <p>
              text5
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$127"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff5"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text5
            </p>
          </li>
        </ListItem>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item 2`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={false}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        1,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <ListItem
          aria-selected={false}
          className="stuff1"
          content={
            <p>
              text1
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$123"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text1
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={true}
          className="stuff2"
          content={
            <p>
              text2
            </p>
          }
          isSelectable={true}
          isSelected={true}
          key=".$124"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={true}
            className="list-item selected is-selectable stuff2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text2
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff3"
          content={
            <p>
              text3
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$125"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff3"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text3
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff4"
          content={
            <p>
              text4
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$126"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff4"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text4
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff5"
          content={
            <p>
              text5
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$127"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff5"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text5
            </p>
          </li>
        </ListItem>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item 3`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={false}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        2,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <ListItem
          aria-selected={false}
          className="stuff1"
          content={
            <p>
              text1
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$123"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text1
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff2"
          content={
            <p>
              text2
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$124"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text2
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={true}
          className="stuff3"
          content={
            <p>
              text3
            </p>
          }
          isSelectable={true}
          isSelected={true}
          key=".$125"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={true}
            className="list-item selected is-selectable stuff3"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text3
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff4"
          content={
            <p>
              text4
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$126"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff4"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text4
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff5"
          content={
            <p>
              text5
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$127"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff5"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text5
            </p>
          </li>
        </ListItem>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item 4`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={false}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={false}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        0,
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <ListItem
          aria-selected={true}
          className="stuff1"
          content={
            <p>
              text1
            </p>
          }
          isSelectable={true}
          isSelected={true}
          key=".$123"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={true}
            className="list-item selected is-selectable stuff1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text1
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff2"
          content={
            <p>
              text2
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$124"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff2"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text2
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff3"
          content={
            <p>
              text3
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$125"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff3"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text3
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff4"
          content={
            <p>
              text4
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$126"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff4"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text4
            </p>
          </li>
        </ListItem>
        <ListItem
          aria-selected={false}
          className="stuff5"
          content={
            <p>
              text5
            </p>
          }
          isSelectable={true}
          isSelected={false}
          key=".$127"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="option"
          tabIndex="0"
        >
          <li
            aria-selected={false}
            className="list-item is-selectable stuff5"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <p>
              text5
            </p>
          </li>
        </ListItem>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item across multiple sections 1`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={true}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        "0-0",
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <Section
          headerContent="Header1"
          key=".0"
          listItems={
            Array [
              <ListItem
                aria-selected={true}
                className="stuff1"
                content={
                  <p>
                    text1
                  </p>
                }
                isSelectable={true}
                isSelected={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff2"
                content={
                  <p>
                    text2
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff3"
                content={
                  <p>
                    text3
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={0}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              />
            }
            isSelected={false}
            key="Header1"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              >
                <div
                  className="list-section-header"
                  id="Section-1"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header1
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header1
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={true}
            className="stuff1"
            content={
              <p>
                text1
              </p>
            }
            isSelectable={true}
            isSelected={true}
            key="123"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={true}
              className="list-item selected is-selectable stuff1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text1
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff2"
            content={
              <p>
                text2
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="124"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff2"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text2
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff3"
            content={
              <p>
                text3
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="125"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff3"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text3
              </p>
            </li>
          </ListItem>
        </Section>
        <Section
          headerContent="Header2"
          key=".1"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff4"
                content={
                  <p>
                    text4
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff5"
                content={
                  <p>
                    text5
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={1}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              />
            }
            isSelected={false}
            key="Header2"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              >
                <div
                  className="list-section-header"
                  id="Section-2"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header2
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header2
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff4"
            content={
              <p>
                text4
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="126"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff4"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text4
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff5"
            content={
              <p>
                text5
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="127"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff5"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text5
              </p>
            </li>
          </ListItem>
        </Section>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item across multiple sections 2`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={true}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        "0-1",
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <Section
          headerContent="Header1"
          key=".0"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff1"
                content={
                  <p>
                    text1
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={true}
                className="stuff2"
                content={
                  <p>
                    text2
                  </p>
                }
                isSelectable={true}
                isSelected={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff3"
                content={
                  <p>
                    text3
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={0}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              />
            }
            isSelected={false}
            key="Header1"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              >
                <div
                  className="list-section-header"
                  id="Section-1"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header1
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header1
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff1"
            content={
              <p>
                text1
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="123"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text1
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={true}
            className="stuff2"
            content={
              <p>
                text2
              </p>
            }
            isSelectable={true}
            isSelected={true}
            key="124"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={true}
              className="list-item selected is-selectable stuff2"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text2
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff3"
            content={
              <p>
                text3
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="125"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff3"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text3
              </p>
            </li>
          </ListItem>
        </Section>
        <Section
          headerContent="Header2"
          key=".1"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff4"
                content={
                  <p>
                    text4
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff5"
                content={
                  <p>
                    text5
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={1}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              />
            }
            isSelected={false}
            key="Header2"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              >
                <div
                  className="list-section-header"
                  id="Section-2"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header2
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header2
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff4"
            content={
              <p>
                text4
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="126"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff4"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text4
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff5"
            content={
              <p>
                text5
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="127"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff5"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text5
              </p>
            </li>
          </ListItem>
        </Section>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item across multiple sections 3`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={true}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        "0-2",
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <Section
          headerContent="Header1"
          key=".0"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff1"
                content={
                  <p>
                    text1
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff2"
                content={
                  <p>
                    text2
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={true}
                className="stuff3"
                content={
                  <p>
                    text3
                  </p>
                }
                isSelectable={true}
                isSelected={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={0}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              />
            }
            isSelected={false}
            key="Header1"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              >
                <div
                  className="list-section-header"
                  id="Section-1"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header1
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header1
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff1"
            content={
              <p>
                text1
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="123"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text1
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff2"
            content={
              <p>
                text2
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="124"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff2"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text2
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={true}
            className="stuff3"
            content={
              <p>
                text3
              </p>
            }
            isSelectable={true}
            isSelected={true}
            key="125"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={true}
              className="list-item selected is-selectable stuff3"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text3
              </p>
            </li>
          </ListItem>
        </Section>
        <Section
          headerContent="Header2"
          key=".1"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff4"
                content={
                  <p>
                    text4
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff5"
                content={
                  <p>
                    text5
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={1}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              />
            }
            isSelected={false}
            key="Header2"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              >
                <div
                  className="list-section-header"
                  id="Section-2"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header2
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header2
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff4"
            content={
              <p>
                text4
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="126"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff4"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text4
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff5"
            content={
              <p>
                text5
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="127"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff5"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text5
              </p>
            </li>
          </ListItem>
        </Section>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;

exports[`should select an item across multiple sections 4`] = `
<SingleSelectList
  hasChevrons={false}
  hasSections={true}
  isDivided={false}
>
  <SelectableList
    disableUnselectedItems={false}
    hasChevrons={false}
    hasSections={true}
    isDivided={false}
    onChange={[Function]}
    selectedIndexes={
      Array [
        "0-0",
      ]
    }
  >
    <List
      isDivided={false}
      role="listbox"
    >
      <ul
        className="list"
        role="listbox"
      >
        <Section
          headerContent="Header1"
          key=".0"
          listItems={
            Array [
              <ListItem
                aria-selected={true}
                className="stuff1"
                content={
                  <p>
                    text1
                  </p>
                }
                isSelectable={true}
                isSelected={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff2"
                content={
                  <p>
                    text2
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff3"
                content={
                  <p>
                    text3
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={0}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              />
            }
            isSelected={false}
            key="Header1"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-1"
                isOpen={false}
                level={2}
                title="Header1"
              >
                <div
                  className="list-section-header"
                  id="Section-1"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header1
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header1
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={true}
            className="stuff1"
            content={
              <p>
                text1
              </p>
            }
            isSelectable={true}
            isSelected={true}
            key="123"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={true}
              className="list-item selected is-selectable stuff1"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text1
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff2"
            content={
              <p>
                text2
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="124"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff2"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text2
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff3"
            content={
              <p>
                text3
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="125"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff3"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text3
              </p>
            </li>
          </ListItem>
        </Section>
        <Section
          headerContent="Header2"
          key=".1"
          listItems={
            Array [
              <ListItem
                aria-selected={false}
                className="stuff4"
                content={
                  <p>
                    text4
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
              <ListItem
                aria-selected={false}
                className="stuff5"
                content={
                  <p>
                    text5
                  </p>
                }
                isSelectable={true}
                isSelected={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="option"
                tabIndex="0"
              />,
            ]
          }
          sectionIndex={1}
        >
          <ListItem
            content={
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              />
            }
            isSelected={false}
            key="Header2"
          >
            <li
              className="list-item"
            >
              <ListSectionHeader
                id="Section-2"
                isOpen={false}
                level={2}
                title="Header2"
              >
                <div
                  className="list-section-header"
                  id="Section-2"
                >
                  <Arrange
                    fill={
                      <h2
                        className="title"
                      >
                        Header2
                      </h2>
                    }
                  >
                    <div
                      className="arrange"
                    >
                      <div
                        className="fit"
                      />
                      <div
                        className="fill"
                      >
                        <h2
                          className="title"
                        >
                          Header2
                        </h2>
                      </div>
                      <div
                        className="fit"
                      />
                    </div>
                  </Arrange>
                </div>
              </ListSectionHeader>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff4"
            content={
              <p>
                text4
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="126"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff4"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text4
              </p>
            </li>
          </ListItem>
          <ListItem
            aria-selected={false}
            className="stuff5"
            content={
              <p>
                text5
              </p>
            }
            isSelectable={true}
            isSelected={false}
            key="127"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
            tabIndex="0"
          >
            <li
              aria-selected={false}
              className="list-item is-selectable stuff5"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
              tabIndex="0"
            >
              <p>
                text5
              </p>
            </li>
          </ListItem>
        </Section>
      </ul>
    </List>
  </SelectableList>
</SingleSelectList>
`;
